[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
blackbird = "main:main_cli"

[project.urls]
Repository = "https://github.com/p1ngul1n0/blackbird"
Issues = "https://github.com/me/p1ngul1n0/blackbird/issues"

[project]
name = "blackbird-osint"
description = "Check if an email / username is registered on websites using the WhatsMyName list"
requires-python = ">= 3.8"
readme = "docs/README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
dependencies = [
    "click",
    "click_config_file",
    "tqdm",
]
authors = [
  {name = "Lucas 'P1ngul1n0' Antoniaci"},
  {name = "eneller"},
]
maintainers = [
  {name = "Pandede"},
]
keywords = [ "osint", "scraping" ]
classifiers = [
    "Private :: pre-release",
]
